2007-02-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* Disabled the LIST with LSUB merging (it just doesn't sound right to
	do this, yet Evolution's Camel does this, as a result did camel-lite
	it too. No longer, for now).

2007-02-19  Sergio Villar Senin  <svillar@igalia.com>

	* TnyCamelFolder: Replaced the folder lock by a recursive static
	folder lock

2007-02-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various fixes for the folder create, rename and delete functionality

2007-02-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* TnyFolderObserver notifications
	* TnyFolderStoreObserver notifications
	* Implementation for poke() in tnycamelfolder
	* Lot's of fixes to the TnyFolderStoreObserver infrastructure
	* First pieces of letting TnyGtkFolderStoreTreeModel become a
	self-responsible TnyFolderStoreObserver and TnyFolderObserver (letting
	it act on changes)

2007-02-16  Sergio Villar Senin  <svillar@igalia.com>

	* Added tny_folder_get_folder_store(): retrieves the folder store
	of a given folder

2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* TnyFolderStoreObserver notifications

2007-02-14  Oystein Gisnas  <oystein@gisnas.net>

	* Maemo packaging scripts: add missing .install for lib-maemo

2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of the TnyFolderStoreChange and TnyFolderStoreObserver

2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various error handling situations when the IMAP service went offline
	or something with the connection happened
	* Connection fails, retry after reconnect stuff

2007-02-13  Oystein Gisnas  <oystein@gisnas.net>

	* Maemo packaging scripts: split into one package per library

2007-02-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for EXPUNGE and FETCH unsolicited events during IDLE. This
	should complete the support for IDLE and Push-Email. From now on we
	can start truly testing this.

2007-02-12  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	