@@ -72,6 +72,7 @@ struct _TnyCamelAccountClass
 	const gchar* (*get_url_string_func) (TnyAccount *self);
 	TnyAccountType (*get_account_type_func) (TnyAccount *self);
 	void (*try_connect_func) (TnyAccount *self, GError **err);
+	void (*cancel_func) (TnyAccount *self);
 
 	void (*add_option_func) (TnyCamelAccount *self, const gchar *option);
 	void (*set_online_func) (TnyCamelAccount *self, gboolean online, GError **err);
